tests/org.eclipse.php.core.tests/workspace/errors/php56/invalidUnpackArgumentOrder01.pdtt
--TEST--
Test invalid unpack argument order
--FILE--
<?php $lala = []; $plum = ""; foo(...$lala, $plum) ?>
--EXPECT--
[line=1, start=44, end=49] Cannot use positional argument after argument unpacking